[gd_scene load_steps=68 format=2]

[ext_resource path="res://Enemies/Wolf_Attack.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Wolf_Die.gd" type="Script" id=2]
[ext_resource path="res://Assets/wolf_idle.png" type="Texture" id=3]
[ext_resource path="res://StateMachine/StateMachine.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Wolf_Move.gd" type="Script" id=5]
[ext_resource path="res://Enemies/Wolf_Idle.gd" type="Script" id=6]
[ext_resource path="res://Enemies/Wolf.gd" type="Script" id=7]
[ext_resource path="res://Assets/wolf_attack.png" type="Texture" id=8]
[ext_resource path="res://Assets/wolf_move.png" type="Texture" id=9]
[ext_resource path="res://Assets/wolf_die.png" type="Texture" id=10]

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 768, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 832, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 896, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 960, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1024, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 1088, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 704, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=66]
animations = [ {
"frames": [ SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ) ],
"loop": false,
"name": "attack",
"speed": 12.0
}, {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ) ],
"loop": false,
"name": "die",
"speed": 12.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ) ],
"loop": true,
"name": "move",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 73.5, 48.5 )

[sub_resource type="RectangleShape2D" id=109]
extents = Vector2( 67.5, 62 )

[node name="Wolf" type="KinematicBody2D"]
position = Vector2( 1, 4 )
script = ExtResource( 7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 66 )
animation = "attack"
frame = 15
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 15 )
shape = SubResource( 53 )

[node name="See" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, 0 )

[node name="Can_Jump" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 200, -200 )

[node name="Attack" type="RayCast2D" parent="."]
position = Vector2( -2, -5 )
enabled = true
cast_to = Vector2( 210, 0 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="StateMachine/Attack"]
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="Above_and_Below" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Above_and_Below"]
position = Vector2( 0.5, 17 )
shape = SubResource( 109 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="StateMachine/Attack/Timer" to="StateMachine/Attack" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Above_and_Below" to="." method="_on_Above_and_Below_body_entered"]
